--- a/PhoneBookNJ/packages.config
+++ b/PhoneBookNJ/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
@@ -8,4 +9,11 @@
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="Ninject" version="3.3.4" targetFramework="net472" />
+  <package id="Ninject.Extensions.Interception" version="3.3.5" targetFramework="net472" />
+  <package id="Ninject.Extensions.NamedScope" version="3.3.0" targetFramework="net472" />
+  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net472" />
+  <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net472" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.2" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
 </packages>
