completed main tasks

--- a/PhoneBookNJ/PhoneBookNJ.csproj
+++ b/PhoneBookNJ/PhoneBookNJ.csproj
@@ -125,6 +125,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -133,6 +134,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\DictController.cs" />
     <Compile Include="Controllers\WrongRouteController.cs" />
+    <Compile Include="CustomHelpers\Helpers.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -148,6 +150,9 @@
     <Content Include="Views\Dict\Update.cshtml" />
     <Content Include="Views\Dict\Delete.cshtml" />
     <Content Include="Views\WrongRoute\NotFound.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Dict\ViewPart.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
